@@ -1,3 +1,8 @@
+2009-04-07  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-list.cc:
+	Refresh file icon after renaming
+
 2009-04-06  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/utils.cc:
